# numpy-simd-routines

./: .gitignore  .gitmodules  README.md  default.nix  meson.build  meson_options.txt  pyproject.toml  test_requirements.txt
.github/workflows/: cpp-linter.yml  tests.yml
.spin/: cmds.py
npsr/: common.h  hwy.h  lut-inl.h  meson.build  npsr.h  precise.h  utils-inl.h
npsr/trig/: extended-inl.h  high-inl.h  inl.h  large-inl.h  low-inl.h  lut-inl.h  lut-inl.h.py  small-inl.h
npsr/trig/data/: approx.h  approx.h.sol  constants.h  constants.h.sol  data.h  data.h.sol  high.h  high.h.sol  kpi16-inl.h  kpi16-inl.h.sol  large-aprox.h  large-aprox.h.py  large-reduction.h  large-reduction.h.py  reduction.h  reduction.h.sol  small.h  small.h.py
npsr/trig/tests/: cos.cc  mpfr.cc  sin.cc  test_sincos.py  test_trig.py
npsr/trig/tests/data/: large.py  large.py.py  large.sollya
numpy_sr/: __init__.py  _numpy_sr.cc  _numpy_sr.pyi  conftest.py  hwy_target-inl.h  meson.build  pyext-inl.h  pyext-mpfr.h  pyext.cc  pyext.h  testing.py
subprojects/: highway.wrap
test/: __init__.py  conftest.py  datatypes.py  meson.build  utils.py
test/src/: bind-inl.h  helper-intrins-inl.h  intrins-inl.h  module.cpp  prec-bind-inl.h
tools/: generator.py
tools/sollya/: __main__.py  cli.py  core.sol  generate.py
