[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
]

[project]
name = "numpy_sr"
version = "1.0.0.dev0"
# TODO: add `license-files` once PEP 639 is accepted (see meson-python#88)
license = {file = "LICENSE.txt"}

description = "NumPy SIMD Routines"
authors = [{name = "NumPy Developers."}]
maintainers = [
    {name = "NumPy Developers", email="numpy-discussion@python.org"}
]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    'Intended Audience :: Science/Research',
]

[project.urls]
homepage = "https://numpy.org"
documentation = "https://sr.numpy.org/doc/"
source = "https://github.com/numpy/numpy-simd-routines"
download = "https://pypi.org/project/numpy_sr/#files"
tracker = "https://github.com/numpy/numpy-simd-routines/issues"
"release notes" = "https://sr.numpy.org/doc/stable/release"

#[tool.meson-python.args]
#install = ['--tags=runtime,python-runtime,tests,devel']

[tool.spin]
package = 'numpy_sr'

[tool.spin.commands]
"Build" = [
  ".spin/cmds.py:sollya",
]
