# Configures `spin` (https://github.com/scientific-python/spin): the build/test
# commands (`spin build`, `spin test`) and the Sollya code generator (`spin
# sollya`, defined in .spin/cmds.py).

[project]
name = "numpy_sr"
version = "1.0.0.dev0"
description = "NumPy SIMD Routines"
requires-python = ">=3.12"

[tool.pytest.ini_options]
# The suite ships inside the installed package; `spin test` runs it as
# `pytest --pyargs numpy_sr` against build-install/ (on PYTHONPATH), so there is
# no source testpaths/pythonpath here.
python_files = ["test_*.py"]
# Parallelize across CPU cores (pytest-xdist workers are processes, so the
# per-thread FP-exception tests stay valid inside each worker).
addopts = "-n auto"

[tool.ruff]
# Python style + lint: run `ruff check` and `ruff format` (or via `spin run`).
# 79 cols matches the numpy house style the sources are written in; build
# outputs and vendored subprojects are excluded.
line-length = 79
extend-exclude = ["build", "build-install", "subprojects"]

[tool.ruff.lint]
# Bugs (F/B), style (E/W), imports (I), modernization (UP), simplify (SIM),
# comprehensions (C4), and ruff's own checks (RUF).
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]

[tool.pyright]
# Static type check for the package (run `pyright`); runs on the source tree
# without a build. The _numpy_sr extension is compiled-only, so it is
# resolved via numpy_sr/_numpy_sr.pyi -- silence the "stub without source"
# note that necessarily follows.
include = ["numpy_sr"]
pythonVersion = "3.12"
reportMissingModuleSource = "none"

[tool.spin]
package = "numpy_sr"

[tool.spin.commands]
"Build" = [
  "spin.cmds.meson.build",
]
"Codegen" = [
  ".spin/cmds.py:sollya",
]
"Testing" = [
  "spin.cmds.meson.test",
]
"Environments" = [
  "spin.cmds.meson.python",
  "spin.cmds.meson.ipython",
]

# Only the numpy_sr package belongs in build-install; Highway is a build-time
# static dep, so skip its subproject install rules (headers, libhwy.a, pkgconfig).
[tool.spin.kwargs]
"spin.cmds.meson.build" = { meson_install_args = ["--skip-subprojects"] }

